# gjcode

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gjcode/: __init__.py  rand.py  random.py  rnd.py
